{
  "version": 4,
  "terraform_version": "1.1.0",
  "serial": 436,
  "lineage": "fd5f114b-130d-2852-9cfb-0fed22998927",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:214836720718:internet-gateway/igw-0b66d83ce57c92f33",
            "id": "igw-0b66d83ce57c92f33",
            "owner_id": "214836720718",
            "vpc_id": "vpc-0d0af79fa3847c61d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:214836720718:security-group/sg-03f22dce278b6b2d9",
            "description": "Allow connections by 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f22dce278b6b2d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "teste-vpc-allow-http",
            "name_prefix": "",
            "owner_id": "214836720718",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "tags_all": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0af79fa3847c61d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:214836720718:security-group/sg-038fd4bfc69a532b2",
            "description": "Allow connections by 443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-038fd4bfc69a532b2",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "teste-vpc-allow-https",
            "name_prefix": "",
            "owner_id": "214836720718",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_https"
            },
            "tags_all": {
              "Name": "allow_https"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0af79fa3847c61d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:214836720718:security-group/sg-006e8eaedca5a85cc",
            "description": "Allow connections by 22.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-006e8eaedca5a85cc",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "teste-vpc-allow-ssh",
            "name_prefix": "",
            "owner_id": "214836720718",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0af79fa3847c61d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:214836720718:subnet/subnet-0e21cd855bfffb094",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.0.0/16",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e21cd855bfffb094",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "214836720718",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "teste-server-subnet",
              "Replicas": "1",
              "Server": "teste-server",
              "Stack": "dev",
              "Vpc": "vpc-0d0af79fa3847c61d"
            },
            "tags_all": {
              "Name": "teste-server-subnet",
              "Replicas": "1",
              "Server": "teste-server",
              "Stack": "dev",
              "Vpc": "vpc-0d0af79fa3847c61d"
            },
            "vpc_id": "vpc-0d0af79fa3847c61d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:214836720718:vpc/vpc-0d0af79fa3847c61d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01cfb34f005daaf04",
            "default_route_table_id": "rtb-098bca93ebdbd1c32",
            "default_security_group_id": "sg-073b99f606c73a1eb",
            "dhcp_options_id": "dopt-00cbe263477d66473",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d0af79fa3847c61d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-098bca93ebdbd1c32",
            "owner_id": "214836720718",
            "tags": {
              "Name": "teste-vpc",
              "Stack": "dev"
            },
            "tags_all": {
              "Name": "teste-vpc",
              "Stack": "dev"
            }
          }
        }
      ]
    }
  ]
}